# gitsnitch

./: .editorconfig  .gitignore  .gitsnitchrc.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  _config.yml  cliff.toml  deny.toml  index.md  prek.toml  rust-toolchain.toml
.github/workflows/: publish-crates.yml  publish-rust-docs.yml  release.yml  rust.yml
_layouts/: default.html
assets/css/: site.css
docs/: AGENTS-code-reviewer-safety-profile.md  AGENTS-contributor.md  AGENTS-review-checklist.md  AGENTS-revisit-api-docs.md  AGENTS-tooling.md
docs/api_design/: api_design.plantuml  api_v1.example.json  api_v1.schema.json
docs/content/: shared-core.md
packaging/choco/: gitsnitch.nuspec
packaging/choco/tools/: chocolateyInstall.ps1
packaging/nuget/: gitsnitch.nuspec
scripts/: sync-docs.sh
src/: cli.rs  exit_codes.rs  main.rs  main_tests.rs  presets.rs  report_output.rs  runtime_inputs.rs  violations.rs  windows_console.rs
src/config/: mod.rs  tests.rs
src/presets/: tests.rs
src/presets_data/: conventional_commits.toml  forbid_wip.toml  report_decorative_text.jinja2  report_plain_text.jinja2  security_related_edits_mention.toml  title_body_separator.toml  title_body_seperator.toml
src/templates/: report_decorative_text.jinja2
src/violations/: tests.rs
tests/: exit_codes.rs
