[package]
name = "gitsnitch"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Lints your Git commit history against a declarative ruleset"
documentation = "https://docs.rs/gitsnitch"
homepage = "https://github.com/iilei/gitsnitch"
repository = "https://github.com/iilei/gitsnitch"

[dependencies]
clap = { version = "4", features = ["derive"] }
json5 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
regex = "1"
minijinja = "2"
chrono = { version = "0.4", features = ["clock"] }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"

[package.metadata.cargo-machete]
ignored = ["serde", "thiserror", "toml"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
