[package]
description = "Lints your Git commit history against a declarative ruleset"
documentation = "https://docs.rs/gitsnitch"
edition = "2024"
homepage = "https://github.com/iilei/gitsnitch"
license = "MIT"
name = "gitsnitch"
repository = "https://github.com/iilei/gitsnitch"
version = "0.3.0"

[dependencies]
chrono = { version = "0.4", features = [
  "clock",
] }
clap = { version = "4", features = [
  "derive",
] }
json5 = "1"
minijinja = "2"
regex = "1"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
] }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = "deny"
arithmetic_side_effects = "deny"
dbg_macro = "deny"
expect_used = "deny"
float_arithmetic = "deny"
indexing_slicing = "deny"
nursery = "deny"
panic = "deny"
pedantic = "deny"
string_slice = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

  [package.metadata.cargo-machete]
  ignored = [
    "serde",
    "thiserror",
    "toml",
  ]

  [package.metadata.binstall]
  bin-dir = "{ bin }{ binary-ext }"
    [package.metadata.binstall.overrides."x86_64-unknown-linux-musl"]
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-Linux-musl-x86_64.tar.gz"

    [package.metadata.binstall.overrides."aarch64-unknown-linux-musl"]
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-Linux-musl-arm64.tar.gz"

    [package.metadata.binstall.overrides."armv7-unknown-linux-musleabihf"]
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-Linux-musleabihf-armv7.tar.gz"

    [package.metadata.binstall.overrides."x86_64-apple-darwin"]
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macOS-x86_64.tar.gz"

    [package.metadata.binstall.overrides."aarch64-apple-darwin"]
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macOS-arm64.tar.gz"

    [package.metadata.binstall.overrides.'cfg(all(target_os = "macos", target_arch = "universal"))']
    pkg-fmt = "tgz"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macOS-universal2.tar.gz"

    [package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
    pkg-fmt = "zip"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-Windows-msvc-x86_64.zip"

    [package.metadata.binstall.overrides."aarch64-pc-windows-msvc"]
    pkg-fmt = "zip"
    pkg-url = "{ repo }/releases/download/v{ version }/{ name }-Windows-msvc-arm64.zip"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
